Many fixes and improvements for server installation and process handling